# speakeasy-client-sdk-python

./: .genignore  .gitignore  README.md  RELEASES.md  USAGE.md  codeSamples.yaml  files.gen  gen.yaml  overlay.yaml  pylintrc  pyproject.toml  setup.py
.github/workflows/: generation.yml  sdk_generation.yaml
.speakeasy/: gen.yaml  workflow.yaml
docs/apiendpoints/: README.md  deleteapiendpoint.md  findapiendpoint.md  generateopenapispecforapiendpoint.md  generatepostmancollectionforapiendpoint.md  getallapiendpoints.md  getallforversionapiendpoints.md  getapiendpoint.md  upsertapiendpoint.md
docs/apis/: README.md  deleteapi.md  generateopenapispec.md  generatepostmancollection.md  getallapiversions.md  getapis.md  upsertapi.md
docs/embeds/: README.md  getembedaccesstoken.md  getvalidembedaccesstokens.md  revokeembedaccesstoken.md
docs/metadata/: README.md  deleteversionmetadata.md  getversionmetadata.md  insertversionmetadata.md
docs/models/internal/: globals.md
docs/models/operations/: activatesubscriptionnamespacerequest.md  activatesubscriptionnamespaceresponse.md  applyoperationidsrequest.md  applyoperationidsrequestbody.md  applyoperationidsresponse.md  archivenamespacerequest.md  archivenamespacerequestbody.md  archivenamespaceresponse.md  checkaccessrequest.md  checkaccessresponse.md  checkgithubaccessrequest.md  checkgithubaccessresponse.md  configurecodesamplesresponse.md  configuremintlifyreporesponse.md  configuretargetresponse.md  createfreetrialresponse.md  createorganizationresponse.md  createremotesourceresponse.md  createrequestbody.md  createresponse.md  createsubscriptionglobals.md  createsubscriptionrequest.md  createsubscriptionresponse.md  createworkspaceresponse.md  createworkspacetokenglobals.md  createworkspacetokenrequest.md  createworkspacetokenresponse.md  deleteapiendpointrequest.md  deleteapiendpointresponse.md  deleteapirequest.md  deleteapiresponse.md  deleteschemarequest.md  deleteschemaresponse.md  deleteversionmetadatarequest.md  deleteversionmetadataresponse.md  deleteworkspacetokenglobals.md  deleteworkspacetokenrequest.md  (+208 more)
docs/plugins/: README.md  getplugins.md  runplugin.md  upsertplugin.md
docs/requests/: README.md  generaterequestpostmancollection.md  getrequestfromeventlog.md  queryeventlog.md
docs/schemas/: README.md  deleteschema.md  downloadschema.md  downloadschemarevision.md  getschema.md  getschemadiff.md  getschemarevision.md  getschemas.md  registerschema.md
docs/speakeasy/: README.md  validateapikey.md
scripts/: prepare-readme.py
src/sdk/: apiendpoints.py  apis.py  embeds.py  metadata.py  plugins.py  requests.py  schemas.py  sdk.py
src/speakeasy/: apiendpoints.py  apis.py  artifacts.py  auth.py  embeds.py  events.py  github.py  metadata.py  organizations.py  plugins.py  reports.py  requests.py  schemas.py  sdk.py  sdkconfiguration.py  suggest.py
src/speakeasy_client_sdk_python/: _version.py  apiendpoints.py  apis.py  artifacts.py  auth.py  basesdk.py  codesamples.py  embeds.py  events.py  github.py  metadata.py  organizations.py  reports.py  requests.py  schemas.py  sdk.py  sdkconfiguration.py  shorturls.py  subscriptions.py  suggest.py  workspaces.py
(+552 files in other folders)
