[tool.poetry]
name = "speakeasy-client-sdk-python"
version = "7.0.0-rc.2"
description = "Speakeasy API Client SDK for Python"
authors = ["Speakeasy",]
readme = "README-PYPI.md"
repository = "https://github.com/speakeasy-api/speakeasy-client-sdk-python.git"
packages = [
    { include = "speakeasy_client_sdk_python", from = "src" }
]
include = ["py.typed", "src/speakeasy_client_sdk_python/py.typed"]

[tool.setuptools.package-data]
"*" = ["py.typed", "src/speakeasy_client_sdk_python/py.typed"]

[virtualenvs]
in-project = true

[tool.poetry.dependencies]
python = "^3.8"
eval-type-backport = "^0.2.0"
httpx = "^0.28.1"
jsonpath-python = "^1.0.6"
pydantic = "~2.10.3"
python-dateutil = "^2.8.2"
typing-inspect = "^0.9.0"

[tool.poetry.group.dev.dependencies]
mypy = "==1.13.0"
pylint = "==3.2.3"
types-python-dateutil = "^2.9.0.20240316"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
disable_error_code = "misc"

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath"
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"


